--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="Linkedin">
-          <a href="https://linkedin.com/felipehuffner/" target="_blank">
+          <a href="https://www.linkedin.com/in/felipehuffner/" target="_blank">
             <img src="images\IconeLinkedinBranco.png" alt="ícone linkedin" />
           </a>
         </li>
